[package]
name = "solri"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Rust implementation of a minimal self-governed WebAssembly blockchain"
license = "GPL-3.0"
edition = "2018"

[dependencies]
primitive-types = "0.4"
blockchain = { path = "vendor/blockchain" }
blockchain-network = { path = "vendor/blockchain/network" }
blockchain-network-libp2p = { path = "vendor/blockchain/network/libp2p" }
blockchain-network-local = { path = "vendor/blockchain/network/local" }
bm-le = { path = "vendor/bm/le", features = ["with-codec", "with-serde"] }
bm = { path = "vendor/bm" }
sha3 = "0.8"
clap = "2.33"
schnorrkel = "0.6"
rand = "0.6"
parity-codec = { version = "4.0", features = ["derive"] }
engine = { package = "solri-engine", path = "engine" }
runtime = { package = "solri-runtime", path = "runtime" }

[workspace]
members = [
	"engine",
	"runtime",
	"runtime/cli",
	"metadata",
	"revdb",
]
exclude = [
	"utils/wasm-builder",
	"utils/wasm-builder-runner",
	"vendor",
]
