[package]
name = "bm"
version = "0.10.5"
description = "Binary Merkle Trie"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
digest = "0.8"
typenum = "1.10"
generic-array = "0.12"
serde = { version = "1.0", default-features = false, optional = true, features = ["derive", "alloc"] }
parity-codec = { version = "4.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
sha2 = "0.8"
hash-db = "0.11"
plain_hasher = "0.2"
primitive-types = "0.4"

[features]
default = ["std"]
std = ["serde/std", "parity-codec/std"]
