[package]
name = "solri-engine"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
wasmi = "0.5.0"
metadata = { package = "solri-metadata", path = "../metadata" }

[dev-dependencies]
solri-runtime = { path = "../runtime" }
parity-codec = { version = "4.0", features = ["derive"] }
blockchain = "0.9"
