[package]
name = "solri-engine"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
wasmi = "0.5.0"
metadata = { package = "solri-metadata", path = "../metadata" }
blockchain = { path = "../blockchain" }
parity-codec = { version = "4.0", features = ["derive"], optional = true }

[features]
default = ["parity-codec"]

[dev-dependencies]
solri-runtime = { path = "../runtime" }
bm = { path = "../bm", features = ["parity-codec"] }
