[package]
name = "solri-metadata"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
blockchain-core = { path = "../vendor/blockchain/core", default-features = false }
parity-codec = { version = "4.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["blockchain-core/std", "parity-codec/std"]
