[package]
name = "solri-runtime"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"
build = "build.rs"

[dependencies]
wee_alloc = "0.4.4"

[features]
default = ["std"]
std = []

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2", path = "../utils/wasm-builder-runner" }
