[package]
name = "bm-le-derive"
version = "0.10.0"
description = "Derive for bm-le."
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
deriving = "0.1.3"

[dev-dependencies]
bm-le = { version = "0.10", path = ".." }
bm = { version = "0.10", path = "../.." }
primitive-types = "0.4"
sha2 = "0.8"
typenum = "1.10"
generic-array = "0.12"